manifest/objects/Apttus_Approval__Approval_Request__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval__Rejection_Action__c</fullName>
        <label>Rejection Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Rejection</fullName>
                </value>
                <value>
                    <fullName>Final Rejection</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Group &amp; Final Rejection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to indicate a user who is the agreement owner when the request is for an agreement or agreement term exception.  This value is populated at runtime by the approvals engine when the request is assigned and is used the Approval Request Comments Modified email alert to send additional notifications to the Agreement Owner, Requestor, and Opportunity owner.</description>
        <label>Related Agreement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to indicate a user who is the agreement owner when the request is for an agreement or agreement term exception.  This value is populated at runtime by the approvals engine when the request is assigned and is used the Approval Request Comments Modified email alert to send additional notifications to the Agreement Owner, Requestor, and Opportunity owner.</description>
        <label>Related Agreement Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement_Term_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement Term Exception</label>
        <referenceTo>Apttus__Agreement_Term_Exception__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>R00N70000002CXCIEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>R00N70000001lyBVEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to indicate a user who is the agreement owner when the request is for an agreement or agreement term exception.  This value is populated at runtime by the approvals engine when the request is assigned and is used the Approval Request Comments Modified email alert to send additional notifications to the Agreement Owner, Requestor, and Opportunity owner.</description>
        <label>Related Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>R00N70000001lyBlEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__RequestType__c</fullName>
        <description>The approval request type</description>
        <inlineHelpText>The approval request type</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Subprocess</fullName>
                </value>
                <value>
                    <fullName>Child Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Request_Comments__c</fullName>
        <label>Approval Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SendReminders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SequenceString__c</fullName>
        <formula>LPAD(Apttus_Approval__Sequence__c, 5, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Sequence String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Sequence__c</fullName>
        <label>Sub-Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Status_Link__c</fullName>
        <formula>HYPERLINK(Id,
CASE(Apttus_Approval__Approval_Status__c,
&quot;Not Submitted&quot;,&quot;Not Submitted&quot;,
&quot;Notified&quot;,&quot;Notified&quot;,
&quot;Submitted&quot;,&quot;Submitted&quot;,
&quot;Assigned&quot;,&quot;Assigned&quot;,
&quot;Reassigned&quot;,&quot;Reassigned&quot;,
&quot;Approved&quot;,&quot;Approved&quot;,
&quot;Rejected&quot;,&quot;Rejected&quot;,
&quot;Cancelled&quot;,&quot;Cancelled&quot;,
&quot;On Hold&quot;,&quot;On Hold&quot;, 
&quot;None&quot;),
&quot;_top&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepLabel__c</fullName>
        <description>The step label</description>
        <inlineHelpText>The step label</inlineHelpText>
        <label>Step Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepNameLink__c</fullName>
        <formula>IF (OR(ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Reassigned&quot;)), HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?Id=&quot;&amp;Id&amp;&quot;&amp;pageMode=approveReject&quot;, Apttus_Approval__Step_Name__c, &quot;_top&quot;), Apttus_Approval__Step_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequenceString__c</fullName>
        <description>Sequence with trailing zeros suppressed</description>
        <formula>IF(FIND(&apos;.&apos;, TEXT(Apttus_Approval__StepSequence__c)) = 2, LEFT(TEXT(Apttus_Approval__StepSequence__c), FIND(&apos;.&apos;, TEXT(Apttus_Approval__StepSequence__c))) + TEXT(VALUE(RIGHT(RPAD(TEXT(Apttus_Approval__StepSequence__c), 5, &apos;0&apos;), 3))), LEFT(TEXT(Apttus_Approval__StepSequence__c), FIND(&apos;.&apos;, TEXT(Apttus_Approval__StepSequence__c))) + TEXT(VALUE(RIGHT(RPAD(TEXT(Apttus_Approval__StepSequence__c), 6, &apos;0&apos;), 3))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sequence with trailing zeros suppressed</inlineHelpText>
        <label>Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequence__c</fullName>
        <description>The step execution sequence</description>
        <label>Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Seq_Number__c</fullName>
        <label>Step Group Seq Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Name__c</fullName>
        <description>The step name</description>
        <label>Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step__c</fullName>
        <label>Step Definition Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment1__c</fullName>
        <description>A comment entered by the submitter when the request was submitted that can be either a process or step level comment.  The comment label is specified by the &quot;Submission Comment 1 Label&quot; field in the related approval process definition.</description>
        <inlineHelpText>A comment entered by the submitter when the request was submitted that can be either a process or step level comment.  The comment label is specified by the &quot;Submission Comment 1 Label&quot; field in the related approval process definition.</inlineHelpText>
        <label>Submission Comment 1</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment2__c</fullName>
        <description>A second comment entered by the submitter when the request was submitted.  The comment label is specified by the &quot;Submission Comment 2 Label&quot; field in the related approval process definition.</description>
        <inlineHelpText>A second comment entered by the submitter when the request was submitted.  The comment label is specified by the &quot;Submission Comment 2 Label&quot; field in the related approval process definition.</inlineHelpText>
        <label>Submission Comment 2</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment3__c</fullName>
        <description>A third comment entered by the submitter when the request was submitted.  The comment label is specified by the &quot;Submission Comment 3 Label&quot; field in the related approval process definition.</description>
        <inlineHelpText>A third comment entered by the submitter when the request was submitted.  The comment label is specified by the &quot;Submission Comment 3 Label&quot; field in the related approval process definition.</inlineHelpText>
        <label>Submission Comment 3</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessDependsOn__c</fullName>
        <description>List of sub processes (belonging to the same step) which must be completed before this sub process. The list contains a comma separated subprocess sequence numbers</description>
        <label>Subprocess Depends On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessName__c</fullName>
        <description>The name of the subprocess the step is associated with</description>
        <label>Subprocess Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessSequence__c</fullName>
        <description>The subprocess execution sequence</description>
        <label>Subprocess Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubstepDependsOn__c</fullName>
        <description>List of sub steps (belonging to the same subprocess) which must be completed before this substep. The list contains a comma separated substep sequence numbers</description>
        <label>Substep Depends On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubstepName__c</fullName>
        <description>The name of the substep associated with the subprocess.</description>
        <inlineHelpText>The name of the substep associated with the subprocess.</inlineHelpText>
        <label>Substep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubstepSequence__c</fullName>
        <description>The substep execution sequence within a subprocess</description>
        <label>Substep Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Workflow_Trigger_Added_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that gets set by the ApprovalAction visualforce page when comments are added to an approval request without actually approving or rejecting the request. This flag then becomes the trigger for workflow rules that get fired to send a notification to parties that comments have been entered for the request.</description>
        <label>Workflow Trigger Added Comments</label>
        <type>Checkbox</type>
    </fields>
    <label>Approval Request</label>
    <listViews>
        <fullName>Apttus_Approval__AllApprovals</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Action__c</columns>
        <columns>Apttus_Approval__Approval_Status__c</columns>
        <columns>Apttus_Approval__Date__c</columns>
        <columns>Apttus_Approval__Assigned_To_Name__c</columns>
        <columns>Apttus_Approval__Object_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Approvals</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Approval__MyApprovals</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Action__c</columns>
        <columns>Apttus_Approval__Approval_Status__c</columns>
        <columns>Apttus_Approval__Date__c</columns>
        <columns>Apttus_Approval__Assigned_To_Name__c</columns>
        <columns>Apttus_Approval__Object_Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Approvals</label>
    </listViews>
    <listViews>
        <fullName>Contract_Ops_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <recordTypes>
        <fullName>Apttus_Approval__Agreement</fullName>
        <active>true</active>
        <description>Agreement</description>
        <label>Agreement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>